--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       sizes="32x32"
       href="./img/favicon-32x32.png"
     />
-
+    <link rel="stylesheet" href="style.css" />
     <title>Frontend Mentor | NFT preview card component</title>
   </head>
   <body></body>
