html structure added

--- a/index.html
+++ b/index.html
@@ -18,5 +18,31 @@
     <link rel="stylesheet" href="style.css" />
     <title>Frontend Mentor | NFT preview card component</title>
   </head>
-  <body></body>
+  <body>
+    <main>
+      <section class="card">
+        <img src="./img/image-equilibrium.jpg" alt="cube" />
+        <h1 class="card-heading">Equilibrium #3429</h1>
+        <p class="card-subtitle">
+          Our Equilibrium collection promotes balance and calm.
+        </p>
+        <div class="price-box">
+          <div class="eth-price">
+            <img src="./img/icon-ethereum.svg" alt="ethereum logo" />
+            <span class="ethereum">0.041 ETH</span>
+          </div>
+          <div class="days-left">
+            <img src="./img/icon-clock.svg" alt="clock icon" />
+            <span class="days">3 days left</span>
+          </div>
+        </div>
+        <div class="creator">
+          <img src="./img/image-avatar.png" alt="picture of an nft creator" />
+          <p class="creation">
+            Creation of <span class="creators-name">Jules Wyvern</span>
+          </p>
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
