--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <main>
       <section class="card">
-        <img src="./img/image-equilibrium.jpg" alt="cube" />
+        <img class="cube-image" src="./img/image-equilibrium.jpg" alt="cube" />
         <h1 class="card-heading">Equilibrium #3429</h1>
         <p class="card-subtitle">
           Our Equilibrium collection promotes balance and calm.
