image hover overlay styled

--- a/index.html
+++ b/index.html
@@ -21,7 +21,16 @@
   <body>
     <main>
       <section class="card">
-        <img class="cube-image" src="./img/image-equilibrium.jpg" alt="cube" />
+        <div class="image-container">
+          <img
+            class="cube-image"
+            src="./img/image-equilibrium.jpg"
+            alt="cube"
+          />
+          <div class="image-overlay">
+            <img src="./img/icon-view.svg" alt="view" />
+          </div>
+        </div>
         <h1 class="card-heading">Equilibrium #3429</h1>
         <p class="card-subtitle">
           Our Equilibrium collection promotes balance and calm.
